--- a/a/m.html
+++ b/a/m.html
@@ -117,6 +117,7 @@
             document.getElementById('improved-functionality-desc').textContent = 'يوفر تجربة أكثر سلاسة ويمكن أن يساعد في حل بعض المشاكل.';
             document.getElementById('note').textContent = 'يرجى ملاحظة أن تغيير الجلسات لن يؤثر على عملياتك.';
             mainButton.text = "طلب جلسة جديدة";
+            successMessage = "تم الإرسال!";
         } else {
             document.getElementById('title').textContent = 'Reset Sessions Advisory';
             document.getElementById('advice').textContent = 'We advise our clients to reset their sessions now and then because it can be helpful for a few reasons:';
@@ -128,6 +129,7 @@
             document.getElementById('improved-functionality-desc').textContent = 'Provides a more seamless experience and can help resolve certain issues.';
             document.getElementById('note').textContent = 'Note that changing sessions will not affect your operations.';
             mainButton.text = "Request New Session";
+            successMessage = "Sent!";
         }
     }
 
