--- a/a/m.html
+++ b/a/m.html
@@ -74,13 +74,13 @@
 </header>
 <main>
     <div class="list-container">
-        <p>We advise our clients to reset their sessions now and then because it can be helpful for a few reasons:</p>
+        <p id="advice">We advise our clients to reset their sessions now and then because it can be helpful for a few reasons:</p>
         <ul>
-            <li><strong>Extra Security:</strong> Adds an extra layer of security, by making it more difficult for someone to impersonate you or tamper with your information.</li>
-            <li><strong>Privacy Boost:</strong> Maintains the privacy of sensitive information.</li>
-            <li><strong>Improved Functionality:</strong> Provides a more seamless experience and can help resolve certain issues.</li>
+            <li><strong id="extra-security">Extra Security:</strong> <span id="extra-security-desc">Adds an extra layer of security, by making it more difficult for someone to impersonate you or tamper with your information.</span></li>
+            <li><strong id="privacy-boost">Privacy Boost:</strong> <span id="privacy-boost-desc">Maintains the privacy of sensitive information.</span></li>
+            <li><strong id="improved-functionality">Improved Functionality:</strong> <span id="improved-functionality-desc">Provides a more seamless experience and can help resolve certain issues.</span></li>
         </ul>
-        <h6>Note that changing sessions will not affect your operations.</h6>
+        <h6 id="note">Note that changing sessions will not affect your operations.</h6>
     </div>
     <div class="language-container">
         <select id="language-selector">
