--- a/index.html
+++ b/index.html
@@ -51,16 +51,6 @@
                     <option value="8">8x</option>
                     <option value="9">9x</option>
                     <option value="10">10x</option>
-                    <option value="11">11x</option>
-                    <option value="12">12x</option>
-                    <option value="13">13x</option>
-                    <option value="14">14x</option>
-                    <option value="15">15x</option>
-                    <option value="16">16x</option>
-                    <option value="17">17x</option>
-                    <option value="18">18x</option>
-                    <option value="19">19x</option>
-                    <option value="20">20x</option>
                 </select>
             </div>
             <div class="input-group">
@@ -82,8 +72,10 @@
                 </select>
             </div>
             <div class="input-group">
-                <span for="usdtInput">Desired Loss</span>
+                <span for="usdtInput">Per Desired Loss</span>
                 <input type="text" placeholder="0.00" id="sl_usdtInput">
+                <span for="usdtInput">Per Price</span>
+                <input type="text" placeholder="0.00" id="sl_priceInput">
             </div>
             <div class="button-container">
                 <button class="button" onclick="sendSl()">Add</button>
@@ -100,8 +92,10 @@
                 </select>
             </div>
             <div class="input-group">
-                <span for="usdtInput">Desired Profit</span>
+                <span for="usdtInput">Per Desired Profit</span>
                 <input type="text" placeholder="0.00" id="tp_usdtInput">
+                <span for="usdtInput">Per Price</span>
+                <input type="text" placeholder="0.00" id="tp_priceInput">
             </div>
             <div class="button-container">
                 <button class="button" onclick="sendTp()">Add</button>
