--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
             <div class="input-group">
                 <span for="usdtInput">Per Desired Loss</span>
                 <input type="text" placeholder="0.00" id="sl_usdtInput">
-                <br><br>
+            </div>
+            <div class="input-group">
                 <span for="usdtInput">Per Price</span>
                 <input type="text" placeholder="0.00" id="sl_priceInput">
             </div>
@@ -95,10 +96,11 @@
             <div class="input-group">
                 <span for="usdtInput">Per Desired Profit</span>
                 <input type="text" placeholder="0.00" id="tp_usdtInput">
-                <br><br>
+            </div>
+            <div>
                 <span for="usdtInput">Per Price</span>
                 <input type="text" placeholder="0.00" id="tp_priceInput">
-            </div>
+            <div class="input-group">
             <div class="button-container">
                 <button class="button" onclick="sendTp()">Add</button>
             </div>
