--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
                 <span for="usdtInput">Per Desired Profit</span>
                 <input type="text" placeholder="0.00" id="tp_usdtInput">
             </div>
-            <div>
+            <div class="input-group">
                 <span for="usdtInput">Per Price</span>
                 <input type="text" placeholder="0.00" id="tp_priceInput">
-            <div class="input-group">
+            </div>
             <div class="button-container">
                 <button class="button" onclick="sendTp()">Add</button>
             </div>
