--- a/index.html
+++ b/index.html
@@ -62,6 +62,28 @@
             </div>
         </div>
         <div class="section">
+            <div class="SL/TP-preSetting"><strong>Stop-Loss Setting</strong></div>
+            <div class="input-group">
+                <span for="symbolSelect">Symbol</span>
+                <select id="sltp_symbolSelect">
+                    <option value="BTCUSDT">BTC</option>
+                    <option value="ETHUSDT">ETH</option>
+                    <option value="BNBUSDT">BNB</option>
+                </select>
+            </div>
+            <div class="input-group">
+                <span for="usdtInput">Desired Loss</span>
+                <input type="text" placeholder="0.00" id="sl2_usdtInput">
+            </div>
+            <div class="input-group">
+                <span for="usdtInput">Desired Loss</span>
+                <input type="text" placeholder="0.00" id="tp2_usdtInput">
+            </div>
+            <div class="button-container">
+                <button class="button" onclick="sendSlTp()">Add</button>
+            </div>
+        </div>
+        <div class="section">
             <div class="Stop-Loss-Setting"><strong>Stop-Loss Setting</strong></div>
             <div class="input-group">
                 <span for="symbolSelect">Symbol</span>
