--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
         </div>
         <div class="section">
-            <div class="SL/TP-preSetting"><strong>Sl/Tp PreSetting</strong></div>
+            <div class="Sl/TP-preSetting"><strong>Stop-Loss/Take-Profit PreSetting</strong></div>
             <div class="input-group">
                 <span for="symbolSelect">Symbol</span>
                 <select id="sltp_symbolSelect">
@@ -178,7 +178,7 @@
                 <button class="button button-blue" onclick="sendList()">List Trade Queue</button>
             </div>
             <div class="button-container">
-                <button class="button button-blue" onclick="sendSlTpList()">List Sl/Tp Order Queue</button>
+                <button class="button button-blue" onclick="sendSlTpList()">List SL/TP Orders Queue</button>
             </div>
             <div class="button-container">
                 <button class="button button-blue" onclick="sendOp()">Load Open Positions</button>
