--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
         </div>
         <div class="section">
-            <div class="Sl/TP-preSetting"><strong>Stop-Loss/Take-Profit PreSetting</strong></div>
+            <div class="Sl/Tp-preSetting"><strong>Sl/Tp PreSetting</strong></div>
             <div class="input-group">
                 <span for="symbolSelect">Symbol</span>
                 <select id="sltp_symbolSelect">
