--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="Open-Orders-Cancelling"><strong>Open Orders Cancelling</strong></div>
             <div class="input-group">
                 <span for="symbolSelect">Cancel open orders for</span>
-                <select id="c_symbolSelect">
+                <select id="symbolSelect">
                     <option value="BTCUSDT">BTC</option>
                     <option value="ETHUSDT">ETH</option>
                     <option value="BNBUSDT">BNB</option>
@@ -159,7 +159,7 @@
             <div class="Position-Closing"><strong>Position Closing</strong></div>
             <div class="input-group">
                 <span for="symbolSelect">Close open position of</span>
-                <select id="close_symbolSelect">
+                <select id="symbolSelect">
                     <option value="BTCUSDT">BTC</option>
                     <option value="ETHUSDT">ETH</option>
                     <option value="BNBUSDT">BNB</option>
