--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="Markets"><strong>Markets</strong></div>
             <div class="input-group">
                 <span for="symbolSelect">Get the last price of</span>
-                <select id="m_symbolSelect">
+                <select id="symbolSelect">
                     <option value="BTCUSDT">BTC</option>
                     <option value="ETHUSDT">ETH</option>
                     <option value="BNBUSDT">BNB</option>
@@ -54,15 +54,15 @@
                 </select>
             </div>
             <div class="input-group">
-                <span for="usdtInput">Amount</span>
+                <span for="usdtInput">Amount (usdt)</span>
                 <input type="text" placeholder="0.00" id="usdtInput">
             </div>
             <div class="input-group">
-                <span for="usdtInput">Desired Loss</span>
+                <span for="usdtInput">Stop-Loss (usdt)</span>
                 <input type="text" placeholder="0.00" id="desired_loss">
             </div>
             <div class="input-group">
-                <span for="usdtInput">Desired Profit</span>
+                <span for="usdtInput">Take-Profit (usdt)</span>
                 <input type="text" placeholder="0.00" id="desired_profit">
             </div>
             <div class="button-container">
@@ -73,7 +73,7 @@
             <div class="Stop-Loss-Setting"><strong>Stop-Loss Setting</strong></div>
             <div class="input-group">
                 <span for="symbolSelect">Symbol</span>
-                <select id="sl_symbolSelect">
+                <select id="symbolSelect">
                     <option value="BTCUSDT">BTC</option>
                     <option value="ETHUSDT">ETH</option>
                     <option value="BNBUSDT">BNB</option>
@@ -95,7 +95,7 @@
             <div class="Take-Profit-Setting"><strong>Take-Profit Setting</strong></div>
             <div class="input-group">
                 <span for="symbolSelect">Symbol</span>
-                <select id="tp_symbolSelect">
+                <select id="symbolSelect">
                     <option value="BTCUSDT">BTC</option>
                     <option value="ETHUSDT">ETH</option>
                     <option value="BNBUSDT">BNB</option>
@@ -117,7 +117,7 @@
             <div class="Open-Orders-Viewing"><strong>Open Orders Viewing</strong></div>
             <div class="input-group">
                 <span for="symbolSelect">View open orders for</span>
-                <select id="or_symbolSelect">
+                <select id="symbolSelect">
                     <option value="BTCUSDT">BTC</option>
                     <option value="ETHUSDT">ETH</option>
                     <option value="BNBUSDT">BNB</option>
@@ -145,7 +145,7 @@
             <div class="Trade-Queue-Cancelling"><strong>Trade Queue Cancelling</strong></div>
             <div class="input-group">
                 <span for="symbolSelect">Cancel queued trade of</span>
-                <select id="ct_symbolSelect">
+                <select id="symbolSelect">
                     <option value="BTCUSDT">BTC</option>
                     <option value="ETHUSDT">ETH</option>
                     <option value="BNBUSDT">BNB</option>
