--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
             </div>
             <div class="input-group">
                 <span for="usdtInput">Per Desired Loss</span>
-                <input type="text" placeholder="0.00" id="sl_usdtInput">
+                <input type="text" placeholder="0.00" id="usdtInput">
             </div>
             <div class="input-group">
                 <span for="usdtInput">Per Price</span>
-                <input type="text" placeholder="0.00" id="sl_priceInput">
+                <input type="text" placeholder="0.00" id="priceInput">
             </div>
             <div class="button-container">
                 <button class="button" onclick="sendSl()">Add</button>
@@ -103,11 +103,11 @@
             </div>
             <div class="input-group">
                 <span for="usdtInput">Per Desired Profit</span>
-                <input type="text" placeholder="0.00" id="tp_usdtInput">
+                <input type="text" placeholder="0.00" id="usdtInput">
             </div>
             <div class="input-group">
                 <span for="usdtInput">Per Price</span>
-                <input type="text" placeholder="0.00" id="tp_priceInput">
+                <input type="text" placeholder="0.00" id="priceInput">
             </div>
             <div class="button-container">
                 <button class="button" onclick="sendTp()">Add</button>
