--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </select>
             </div>
             <div class="input-group">
-                <span for="usdtInput">Per Desired Loss</span>
+                <span for="usdtInput">Per Usdt</span>
                 <input type="text" placeholder="0.00" id="usdtInput">
             </div>
             <div class="input-group">
@@ -102,7 +102,7 @@
                 </select>
             </div>
             <div class="input-group">
-                <span for="usdtInput">Per Desired Profit</span>
+                <span for="usdtInput">Per Usdt</span>
                 <input type="text" placeholder="0.00" id="usdtInput">
             </div>
             <div class="input-group">
