--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
                 </select>
             </div>
             <div class="input-group">
-                <span for="usdtInput">Per Usdt</span>
-                <input type="text" placeholder="0.00" id="usdtInput">
+                <span for="usdtInput">Per usdt</span>
+                <input type="text" placeholder="0.00" id="sl_usdtInput">
             </div>
             <div class="input-group">
-                <span for="usdtInput">Per Price</span>
+                <span for="usdtInput">Per price</span>
                 <input type="text" placeholder="0.00" id="priceInput">
             </div>
             <div class="button-container">
@@ -102,11 +102,11 @@
                 </select>
             </div>
             <div class="input-group">
-                <span for="usdtInput">Per Usdt</span>
-                <input type="text" placeholder="0.00" id="usdtInput">
+                <span for="usdtInput">Per usdt</span>
+                <input type="text" placeholder="0.00" id="tp_usdtInput">
             </div>
             <div class="input-group">
-                <span for="usdtInput">Per Price</span>
+                <span for="usdtInput">Per price</span>
                 <input type="text" placeholder="0.00" id="priceInput">
             </div>
             <div class="button-container">
