--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                 <input type="text" placeholder="0.00" id="usdtInput">
             </div>
             <div class="input-group">
-                <span for="usdtInput">Stop-Loss (usdt)</span>
+                <span for="usdtInput">Stop-loss (usdt)</span>
                 <input type="text" placeholder="0.00" id="desired_loss">
             </div>
             <div class="input-group">
-                <span for="usdtInput">Take-Profit (usdt)</span>
+                <span for="usdtInput">Take-profit (usdt)</span>
                 <input type="text" placeholder="0.00" id="desired_profit">
             </div>
             <div class="button-container">
