--- a/index.html
+++ b/index.html
@@ -72,20 +72,20 @@
         <div class="section">
             <div class="Stop-Loss-Setting"><strong>Stop-Loss Setting</strong></div>
             <div class="input-group">
-                <span for="symbolSelect">Symbol</span>
-                <select id="symbolSelect">
+                <span for="sl_symbolSelect">Symbol</span>
+                <select id="sl_symbolSelect">
                     <option value="BTCUSDT">BTC</option>
                     <option value="ETHUSDT">ETH</option>
                     <option value="BNBUSDT">BNB</option>
                 </select>
             </div>
             <div class="input-group">
-                <span for="usdtInput">Per usdt</span>
+                <span for="sl_usdtInput">Per usdt</span>
                 <input type="text" placeholder="0.00" id="sl_usdtInput">
             </div>
             <div class="input-group">
-                <span for="usdtInput">Per price</span>
-                <input type="text" placeholder="0.00" id="priceInput">
+                <span for="sl_priceInput">Per price</span>
+                <input type="text" placeholder="0.00" id="sl_priceInput">
             </div>
             <div class="button-container">
                 <button class="button" onclick="sendSl()">Add</button>
@@ -94,20 +94,20 @@
         <div class="section">
             <div class="Take-Profit-Setting"><strong>Take-Profit Setting</strong></div>
             <div class="input-group">
-                <span for="symbolSelect">Symbol</span>
-                <select id="symbolSelect">
+                <span for="tp_symbolSelect">Symbol</span>
+                <select id="tp_symbolSelect">
                     <option value="BTCUSDT">BTC</option>
                     <option value="ETHUSDT">ETH</option>
                     <option value="BNBUSDT">BNB</option>
                 </select>
             </div>
             <div class="input-group">
-                <span for="usdtInput">Per usdt</span>
+                <span for="tp_usdtInput">Per usdt</span>
                 <input type="text" placeholder="0.00" id="tp_usdtInput">
             </div>
             <div class="input-group">
-                <span for="usdtInput">Per price</span>
-                <input type="text" placeholder="0.00" id="priceInput">
+                <span for="tp_priceInput">Per price</span>
+                <input type="text" placeholder="0.00" id="tp_priceInput">
             </div>
             <div class="button-container">
                 <button class="button" onclick="sendTp()">Add</button>
@@ -116,8 +116,8 @@
         <div class="section">
             <div class="Open-Orders-Viewing"><strong>Open Orders Viewing</strong></div>
             <div class="input-group">
-                <span for="symbolSelect">View open orders for</span>
-                <select id="symbolSelect">
+                <span for="oov_symbolSelect">View open orders for</span>
+                <select id="oov_symbolSelect">
                     <option value="BTCUSDT">BTC</option>
                     <option value="ETHUSDT">ETH</option>
                     <option value="BNBUSDT">BNB</option>
@@ -130,8 +130,8 @@
         <div class="section">
             <div class="Open-Orders-Cancelling"><strong>Open Orders Cancelling</strong></div>
             <div class="input-group">
-                <span for="symbolSelect">Cancel open orders for</span>
-                <select id="symbolSelect">
+                <span for="ooc_symbolSelect">Cancel open orders for</span>
+                <select id="ooc_symbolSelect">
                     <option value="BTCUSDT">BTC</option>
                     <option value="ETHUSDT">ETH</option>
                     <option value="BNBUSDT">BNB</option>
@@ -144,8 +144,8 @@
         <div class="section">
             <div class="Trade-Queue-Cancelling"><strong>Trade Queue Cancelling</strong></div>
             <div class="input-group">
-                <span for="symbolSelect">Cancel queued trade of</span>
-                <select id="symbolSelect">
+                <span for="tqc_symbolSelect">Cancel queued trade of</span>
+                <select id="tqc_symbolSelect">
                     <option value="BTCUSDT">BTC</option>
                     <option value="ETHUSDT">ETH</option>
                     <option value="BNBUSDT">BNB</option>
@@ -158,8 +158,8 @@
         <div class="section">
             <div class="Position-Closing"><strong>Position Closing</strong></div>
             <div class="input-group">
-                <span for="symbolSelect">Close open position of</span>
-                <select id="symbolSelect">
+                <span for="pc_symbolSelect">Close open position of</span>
+                <select id="pc_symbolSelect">
                     <option value="BTCUSDT">BTC</option>
                     <option value="ETHUSDT">ETH</option>
                     <option value="BNBUSDT">BNB</option>
