--- a/maintain.html
+++ b/maintain.html
@@ -108,7 +108,7 @@
             lan = 'ar';
         } else {
             document.documentElement.classList.remove('rtl');
-            lan = 'en;
+            lan = 'en';
         }
         translateContent(lang);
     }
